--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -178,8 +178,9 @@
 
 %
 %
-\title{On Constraint Languages for RDF Validation with an account to Reasoning}
+\title{The Role of Constraint Languages and Reasoning for RDF Validation}
 \subtitle{}
+% On Constraint Languages for RDF Validation with an account to Reasoning
 %On Constraint Languages for RDF Validation and Reasoning
 %RDF Validation - Classification of Constraints and Constraint Languages According to Reasoning, Expressivity, and Complexity
 %RDF Validation: An Analysis of Constraint Languages
@@ -843,7 +844,7 @@ $C_R$ corresponds to axioms in OWL. %  e.g., subsumption, sub-properties, cardin
 {\em Sub Properties}\footnote{Corresponds to {\em R-54-SUB-OBJECT-PROPERTIES}, {\em R-54-SUB-DATA-PROPERTIES}}, e.g., 
 is a constraint type for which reasoning may be performed.
 For instance, if a journal volume has an {\em editor} relationship to a person, 
-then the journal volume must also have a {\em creator} relationship to the same person (\ms{editor $\sqsubseteq$ creator}.
+then the journal volume must also have a {\em creator} relationship to the same person (\ms{editor $\sqsubseteq$ creator}).
 If we use sub-properties without reasoning and our data contains the triple \ms{editor(JWS14V29, Staab)},
 then the triple \ms{creator(JWS14V29, Staab)} has to be stated explicitly.
 If this triple is not stated, a constraint violation occurs.
